--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gostack-desafio-09",
+  "name": "go-commerce-backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
